--- a/app.json
+++ b/app.json
@@ -1,15 +1,25 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/logs/logs",
-    "pages/restaurant/restaurant",
     "pages/map/map",
-    "pages/addSpot/addSpot"
+    "pages/input/input",
+    "pages/inputmenu/inputmenu",
+    "pages/inputscenic/inputscenic",
+    "pages/intro/intro",
+    "pages/sb/sb",
+    "pages/restaurant/restaurant",
+    "pages/scenicdetail/scenicdetail",
+    "pages/first/first",
+    "pages/comment/comment",
+    "pages/index/index",
+    "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black"
+    "backgroundColor": "#fff",
+    "navigationBarTitleText": "Title",
+    "navigationBarTextStyle": "black",
+    "enablePullDownRefresh": true,
+    "onReachBottomDistance": 1
   }
 }
